[gd_scene load_steps=3 format=3 uid="uid://c8i00bmfotedv"]

[ext_resource type="Script" path="res://Hud.gd" id="1_bf4qj"]
[ext_resource type="FontFile" uid="uid://c6kikcitd4x6w" path="res://fonts/Xolonium-Regular.ttf" id="2_k58ml"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_bf4qj")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 26.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_k58ml")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -13.0
offset_right = 46.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_k58ml")
theme_override_font_sizes/font_size = 64
text = "Scarlet Hell"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -108.0
offset_right = 88.5
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_k58ml")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
